src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTRasterMultisample_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTRasterMultisample_StringErrorContext.class */
public final class EXTRasterMultisample_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glRasterSamplesEXT(IZ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTRasterMultisampleErrorContext");
        return methods;
    }
}
